--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 97
-</p><p class="card-text">Number of spectra: 7139
-</p><p class="card-text">Last update: 2021-10-23, 08:06</p>
+<p class="card-text">Number of stars: 98
+</p><p class="card-text">Number of spectra: 7141
+</p><p class="card-text">Last update: 2021-10-23, 08:12</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1293,6 +1293,18 @@
       <td>30</td>
       <td>-</td>
       <td>2</td>
+    </tr>
+    <tr>
+      <td><a href="v917sco.html">V917 Sco</a></td>
+      <td>17 48 04.28</td>
+      <td>-36 08 17.32</td>
+      <td>2</td>
+      <td>2021-06-12</td>
+      <td>2021-10-22</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-10-22 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>30</td>
+      <td>-</td>
+      <td>1</td>
     </tr>
   </tbody>
 </table><br><br>
