--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 98
-</p><p class="card-text">Number of spectra: 7252
-</p><p class="card-text">Last update: 2022-01-01, 08:26</p>
+<p class="card-text">Number of stars: 99
+</p><p class="card-text">Number of spectra: 7256
+</p><p class="card-text">Last update: 2022-01-03, 08:38</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -530,10 +530,10 @@
       <td><a href="omicet.html">omi Cet</a></td>
       <td>02 19 20.79</td>
       <td>-02 58 39.50</td>
-      <td>42</td>
+      <td>43</td>
       <td>2015-11-28</td>
-      <td>2021-12-28</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-12-28 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2022-01-02</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2022-01-02 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>15</td>
       <td>1</td>
       <td>1</td>
@@ -638,10 +638,10 @@
       <td><a href="sslep.html">SS Lep</a></td>
       <td>06 04 59.13</td>
       <td>-16 29 03.97</td>
-      <td>38</td>
+      <td>39</td>
       <td>2018-02-17</td>
-      <td>2021-12-28</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-12-28 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2022-01-02</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2022-01-02 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>60</td>
       <td>2</td>
       <td>2</td>
@@ -950,10 +950,10 @@
       <td><a href="v694mon.html">V694 Mon</a></td>
       <td>07 25 51.28</td>
       <td>-07 44 08.08</td>
-      <td>472</td>
+      <td>473</td>
       <td>2011-03-03</td>
-      <td>2021-12-28</td>
-      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-12-28 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>2022-01-02</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2022-01-02 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>1</td>
       <td>0</td>
       <td>0</td>
@@ -1304,6 +1304,18 @@
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-10-22 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>30</td>
       <td>-</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td><a href="wyvel.html">WY Vel</a></td>
+      <td>09 21 59.13</td>
+      <td>-52 33 51.65</td>
+      <td>1</td>
+      <td>2022-01-02</td>
+      <td>2022-01-02</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2022-01-02 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>8</td>
+      <td>1</td>
       <td>1</td>
     </tr>
   </tbody>
