--- a/symbiotics.html
+++ b/symbiotics.html
@@ -72,9 +72,9 @@
       <div class="card-body">
  <p class="card-text">Details on stars:   <a href="http://astronomy.science.upjs.sk/symbiotics/">New Online Database of Symbiotic Variables</a></p>
  <style>table {text-align: center;}table thead th {text-align: center;}</style>
-<p class="card-text">Number of stars: 99
-</p><p class="card-text">Number of spectra: 7256
-</p><p class="card-text">Last update: 2022-01-03, 08:38</p>
+<p class="card-text">Number of stars: 101
+</p><p class="card-text">Number of spectra: 7285
+</p><p class="card-text">Last update: 2022-01-03, 16:51</p>
 <br><br>
 <a href="observers.html" class="btn btn-secondary">Observers</a>
         <a href="observatories.html" class="btn btn-secondary">Observatories</a>
@@ -1315,6 +1315,30 @@
       <td>2022-01-02</td>
       <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2022-01-02 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
       <td>8</td>
+      <td>1</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td><a href="hen3-860.html">Hen 3-860</a></td>
+      <td>13 06 12.93</td>
+      <td>-53 22 52.50</td>
+      <td>25</td>
+      <td>2020-07-19</td>
+      <td>2021-05-24</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2021-05-24 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>0</td>
+      <td>1</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td><a href="v2204oph.html">V2204 Oph</a></td>
+      <td>18 26 01.92</td>
+      <td>+11 55 09.58</td>
+      <td>4</td>
+      <td>2020-07-30</td>
+      <td>2020-08-05</td>
+      <td><script>var date1, date2;date1 = new Date();date2 = new Date( "2020-08-05 00:00:00" );var res = Math.abs(date1 - date2) / 1000;var days = Math.floor(res / 86400);document.write(days);</script></td>
+      <td>0</td>
       <td>1</td>
       <td>1</td>
     </tr>
